docs/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prom.local.tanshilin.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
    - host: grafana.local.tanshilin.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/datasources/proxy/2/loki/api/v1/tail"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
